--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="jp">
-<head>
-    <meta charset="UTF-8">
-    <title>おみくじサイト</title>
-</head>
-<body>
-    <h1>今日のあなたの運勢</h1>
-    <img src="{{ img }}" style="width: 300px;">
-</body>
+<html>
+  <head>
+    <title>Video Streaming Demonstration</title>
+  </head>
+  <body>
+    <h1>Video Streaming Demonstration</h1>
+    <img src="{{ url_for('video_feed') }}">
+  </body>
 </html>
-
